# kicktipp-winning-application

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: precompiled_headers.cmake
src/: CMakeLists.txt
src/app/kwa_gui/: CMakeLists.txt  kwa_gui_main.cpp  match_estimation_gui.cpp
src/app/kwa_gui_app/: CMakeLists.txt  main.cpp
src/kwa_core/: CMakeLists.txt  kwa_common.h  kwa_core.cpp  kwa_core.h  kwa_core_pch.h  match_estimator.cpp  match_estimator.h  stats_provider.cpp  stats_provider.h  team_register.cpp  team_register.h
src/kwa_core/include/kwa_core/: kwa_common.h  kwa_core.h  match_estimator.h  stats_provider.h  team_register.h
src/kwa_core/src/: calculations.cpp  calculations.h  kwa_core.cpp  match_estimator.cpp  stats_provider.cpp
src/kwa_core/test/: CMakeLists.txt  kwa_core.t.cpp  match_estimator.t.cpp  stats_provider.t.cpp
src/kwa_core_test/: CMakeLists.txt  kwa_core_test.cpp  kwa_core_test.h  stats_provider_test.cpp
src/kwa_gui/: CMakeLists.txt  kwa_gui.cpp  main_window.cpp  main_window.h  main_window.ui  match_estimation_gui.cpp  match_estimation_gui.h
src/lib/kwa_core/: CMakeLists.txt  calculations.cpp  calculations.h  kwa_common.h  kwa_core.h  kwa_core_pch.h  stats_provider.cpp  team_register.cpp  team_register.h
src/lib/kwa_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/test/kwa_core_test/: kwa_core_test.h  match_estimator_test.cpp
