INCLUDE_DIRECTORIES( ../../extern/gsl/include)
SET( PROJECT_NAME kwa_gui )

SET( INCLUDE_FILES
	match_estimation_gui.h
)

SET( SOURCE_FILES
	match_estimation_gui.cpp
	kwa_gui_main.cpp
)

#enable_precompiled_headers(kwa_core_pch.h SOURCE_FILES)

FIND_PACKAGE(FLTK REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES( ${FLTK_INCLUDE_DIR})
INCLUDE_DIRECTORIES( ${OpenGL_INCLUDE_DIR})

ADD_EXECUTABLE( ${PROJECT_NAME}
	${INCLUDE_FILES}
    ${SOURCE_FILES}
)

set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER kwa)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
    kwa_core
    dl
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FLTK_LIBRARIES})
